--- a/templates/base.html
+++ b/templates/base.html
@@ -60,30 +60,17 @@
 
 
 	<body>
-		<h1>Build-a-Blog</h1>
+		<h1><a href="/blog">Build-a-Blog</a></h1>
+		<h2><a href="/blog/newpost">Make a New Post!</a></h2>
 
-		<form method='post' action="/blog">
-			<label>
-				<div>Subject</div>
-				<input type='text' name='subject' value="{{subject}}">
-			</label>
-
-			<label>
-				<div>Content</div>
-				<textarea name='content'>{{content}}</textarea>
-			</label>
-
-			<div class="error">{{error}}</div>
-
-			<input type="submit">
-
-		</form>
+		{% block content %}
+        {% endblock %}
 
 		<hr>
 
 		{% for blog in blogs %}
 			<div class='art'>
-				<div class='art-title'>{{blog.subject}}</div>
+				<div class='art-title'><a href=/blog/{{blog.key().id()}}>{{blog.subject}}</a></div>
 				<pre class="art-body">{{blog.content}}</pre>
 			</div>
 		{% endfor %}
